port to 1.20.1forge
Took 1 hour 23 minutes